# SMQTK-Descriptors

./: .gitlab-ci.yml  .mypy.ini  .readthedocs.yaml  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci-unittests.yml
docs/: conf.py  descriptor_generation.rst  descriptor_storage.rst  examples.rst  index.rst  installation.rst  parallelism.rst  readthedocs-reqs.txt  release_notes.rst  release_process.rst  sphinx_server.py
docs/examples/: simple_feature_computation.rst
docs/release_notes/: pending_release.rst  v0.15.0.rst  v0.16.0.rst  v0.17.0.rst  v0.18.0.rst  v0.18.1.rst  v0.19.0.rst  v0.20.0.rst
requirements/: docs.txt  runtime.txt  test.txt
smqtk_descriptors/: __init__.py  descriptor_element_factory.py
smqtk_descriptors/impls/descriptor_element/: file.py  memory.py  postgres.py  solr.py
smqtk_descriptors/impls/descriptor_generator/: caffe1.py  image_descriptor_generator_wrapper.py  prepopulated.py  pytorch.py
smqtk_descriptors/impls/descriptor_set/: memory.py  postgres.py  solr.py
smqtk_descriptors/interfaces/: descriptor_element.py  descriptor_generator.py  descriptor_set.py  image_descriptor_generator.py
smqtk_descriptors/utils/: __init__.py  parallel.py  pytorch_utils.py
src/iqr_training_tool/smqtk_plugins/descriptor_generation/: pytorch.py  utils.py
tests/: test_descriptor_element_factory.py
tests/impls/descriptor_element/: test_file.py  test_memory.py  test_solr.py
tests/impls/descriptor_generator/: test_caffe.py  test_image_descriptor_generator_wrapper.py  test_prepopulated.py  test_pytorch.py
tests/impls/descriptor_set/: test_memory.py
tests/interfaces/: test_descriptor_element.py  test_descriptor_generator.py  test_descriptor_set.py
tests/utils/: test_parallel.py
